# cholla

./: .gitignore  Makefile  make_lux_sor.sh
extras/: makefie_lux.sh  makefie_shamrock.sh  makefie_summit.sh  makefie_summit_fom.sh  makefie_tornado.sh
scale_output_files/: outputs_single_output.txt
src/: VL_3D_cuda.cu  cuda_mpi_routines.cu  global.cpp  global.h  grid3D.cpp  grid3D.h  hydro_cuda.cu  initial_conditions.cpp  io.cpp  io.h  main.cpp  mpi_routines.cpp  mpi_routines.h  poisson_test.cpp  polytrope_functions.cpp  polytrope_functions.h  special.h.old  stars.h  timing_functions.cpp
src/gravity/: grav3D.cpp  grav3D.h  gravity_boundaries.cpp  gravity_functions.cpp  multipole.cu  potential_PFFT_3D.cpp  potential_PFFT_3D.h  potential_SOR_3D.cpp  potential_SOR_3D.h  potential_SOR_3D_gpu.cu
src/particles/: density_CIC.cpp  gravity_CIC.cpp  io_particles.cpp  particles_3D.cpp  particles_3D.h  particles_boundaries.cpp  particles_boundaries_gpu.cu  particles_dynamics.cpp
src/stars/: orbit.cpp  polytrope_functions.cpp  stars.h
src/tides/: multipole.cpp  orbit.cpp  orbit.cu  polytrope_functions.cpp  tides.cpp  tides.h
tests/3D/: Cosmological_dm_50Mpc.txt  Polytropic_Star.txt  poisson.txt  polytrope.txt
tests/cmake_stuff/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/cmake_stuff/Testing/Temporary/: CTestCostData.txt
tests/cmake_stuff/poissonParameterFiles/: poisson128.txt  poisson256.txt  poisson512.txt  poisson64.txt
tests/poisson_test/: test_results
